Making the download text larger

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button"><small>Download QU</small> GitHub</a>
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
         {% endif %}
         {% if site.github.is_user_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>Follow me on OMG</small> GitHub</a>
