--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
         {% if site.github.is_project_page %}
           <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
         {% endif %}
-        {% if site.github.is_user_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>Follow me on OMG</small> GitHub</a>
+        {% if site.github.is_project_page %}
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
         {% endif %}
       </div>
     </header>
