--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
       <div class="inner clearfix">
         <section id="main-content">
           {{ content }}
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
         </section>
 
         <aside id="sidebar">
