--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,20 +24,18 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
           <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
-        {% endif %}
-        {% if site.github.is_project_page %}
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
-        {% endif %}
+        {% endif %}        
       </div>
     </header>
 
     <div id="content-wrapper">
+      <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
       <div class="inner clearfix">
         <section id="main-content">
-          {{ content }}
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
+          {{ content }          
         </section>
+        
 
         <aside id="sidebar">
           {% if site.show_downloads %}
