Removing class name "button from links in content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
     </header>
 
     <div id="content-wrapper">
-      <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
+      <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar">Download QU for Windows</a> </br>
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar">Download QU for Linux</a>
       <div class="inner clearfix">
         <section id="main-content">
-          {{ content }          
+          {{ content }}          
         </section>
         
 
