--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
-          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar" class="button">Download QU</a>
+          <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/QU.Windows.zip" class="button">Download QU (Windows)</a>
         {% endif %}        
       </div>
     </header>
@@ -33,8 +33,8 @@
         <section id="main-content">
           {{ content }}          
           </br></br>
-        <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar">Download QU for Windows</a> </br>
-        <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/cubes.rar">Download QU for Linux</a>
+        <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/QU.Windows.zip">Download QU for Windows</a> </br>
+        <a href="https://github.com/thehamzarocks/QU/releases/download/v1.0.0/QU.Linux.zip">Download QU for Linux</a>
         </section>
         
         
